--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "description": "",
   "devDependencies": {
     "@minify-html/node": "^0.15.0",
+    "markdownlint": "^0.34.0",
     "vite": "^5.3.4"
   }
 }
