--- a/package.json
+++ b/package.json
@@ -1,11 +1,21 @@
 {
   "name": "progress-spinner",
   "version": "1.0.0",
-  "scripts": {},
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build && cp ./src/.nojekyll ./dist/.nojekyll",
+    "preview": "vite preview"
+  },
   "author": "grzegorzkiselev",
   "repository": {
     "url": "https://github.com/grzegorzkiselev/progress-spinner"
   },
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "@minify-html/node": "^0.15.0",
+    "markdownlint": "^0.34.0",
+    "vite": "^5.3.4"
+  }
 }
