--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite --host",
     "build": "vite build && cp ./src/.nojekyll ./dist/.nojekyll",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "git subtree push --prefix dist origin gh-pages"
   },
   "author": "grzegorzkiselev",
   "repository": {
